add a note on model labels

--- a/work2/reports/03-methods/03.4-methods-statistical-analysis.tex
+++ b/work2/reports/03-methods/03.4-methods-statistical-analysis.tex
@@ -4,6 +4,9 @@
 This section presents the statistical analysis of the results of the study.
 We employ a systematic approach to compare the performance of different models and their configurations.
 
+\textbf{Note:} In order to keep the tables and figures reasonable in size, we use a short label system
+for model configurations. The legend for these labels can be found in the appendix \autoref{sec:appendix}.
+
 \subsubsection*{Tests Considered}
 There are various statistical tests available to compare the performance of machine learning models.
 We considered the following tests for our analysis:
