--- a/work2/reports/06-appendix.tex
+++ b/work2/reports/06-appendix.tex
@@ -1,5 +1,5 @@
 \section{Appendix}
-
+\label{sec:appendix}
 \input{tables/KNN_legend}
 \input{tables/KNN-Reduction_legend}
 \input{tables/SVM_legend}
