--- a/work2/reports/03-methods/03.4-methods-statistical-analysis.tex
+++ b/work2/reports/03-methods/03.4-methods-statistical-analysis.tex
@@ -54,11 +54,7 @@ Given these observations, we decided against using ANOVA for our analysis.
 \subsubsection{Friedman Test}
 The Friedman test is a non-parametric equivalent of the repeated-measures ANOVA. 
 For each dataset, it ranks the models separately with the best model receiving a rank of 1, the second-best a rank of 2, and so on.
-<<<<<<< HEAD
 The average rank is used to settle any ties in the ranks \cite{Friedman_anova,Friedman_posthoc}.
-=======
-The average rank is used to settle any ties in the ranks\cite{StatisticalComparisonsOfClassifiersOverMultipleDataSetsJML}.
->>>>>>> 44b6abc19b24bcd22d2fd018bbbbae03100de9f4
 
 While the Friedman test theoretically has less statistical power than ANOVA when ANOVA's assumptions are met,
 it is more suitable for our analysis as it makes no assumptions about normality or equal variances.
@@ -76,11 +72,8 @@ other by checking if their average ranks differ by at least the critical differe
     CD = q_{\alpha} \times \sqrt{\frac{k(k+1)}{6N}}
 \end{equation}
 
-<<<<<<< HEAD
-where $q_{\alpha}$ is based on the Studentized range statistic, $k$ is the number of classifiers, and $N$ is the number of datasets \cite{Friedman_posthoc}.
-=======
-where $q_{\alpha}$ is based on the Studentized range statistic, $k$ is the number of classifiers, and $N$ is the number of datasets\cite{StatisticalComparisonsOfClassifiersOverMultipleDataSetsJML}.
->>>>>>> 44b6abc19b24bcd22d2fd018bbbbae03100de9f4
+where $q_{\alpha}$ is based on the Studentized range statistic, $k$ is the number of classifiers, and $N$ is
+the number of datasets \cite{Friedman_posthoc}.
 If the difference in average ranks between two models exceeds this critical difference, we can conclude that their performances are significantly different.
 
 When performing the Nemenyi test, proper handling of ties is crucial for accurate analysis.
