add cover page and table of contents

--- a/work2/reports/report.tex
+++ b/work2/reports/report.tex
@@ -1,4 +1,4 @@
-\documentclass{article}
+\documentclass[titlepage]{article}
 \usepackage[utf8]{inputenc}
 \usepackage[margin=1in]{geometry}
 \usepackage{booktabs}
@@ -10,13 +10,16 @@
 
 % TODO: Consider adding a table of contents with \tableofcontents
 
-\title{Work 2 - Classification with Lazy Learning and SVM}
+\title{Implementation and Evaluation of KNN and SVM Classification Configurations, with Instance Reduction Techniques}
 \author{Zachary Parent, Sheena Lang, Kacper Poniatowski and Carlos Jiménez}
 \date{\today}
 
 \begin{document}
 
 \maketitle
+
+\tableofcontents
+\newpage
 
 \input{01-introduction}
 \input{02-data/02-data}
