break up main sections

--- a/work2/reports/report.tex
+++ b/work2/reports/report.tex
@@ -20,13 +20,16 @@
 
 \tableofcontents
 \newpage
-
 \input{01-introduction}
+\newpage
 \input{02-data/02-data}
+\newpage
 \input{03-methods/03-methods}
+\newpage
 \input{04-results-and-analysis/04-results-and-analysis}
+\newpage
 \input{05-conclusion}
-
+\newpage
 \bibliography{references}
 \newpage
 \input{06-appendix}
