fix stat methods figure captions

--- a/work2/reports/03-methods/03.4-methods-statistical-analysis.tex
+++ b/work2/reports/03-methods/03.4-methods-statistical-analysis.tex
@@ -98,14 +98,14 @@ If the Nemenyi test fails, we cannot proceed with post-hoc testing as the result
 \begin{figure}[!ht]
     \centering
     \includegraphics[width=0.8\textwidth]{figures/p_values_vs_num_samples_mushroom.png}
-    \caption{P values vs. number of samples for different models and sampling methods for the datasets}
+    \caption{P values vs. number of samples for different models and sampling methods for the mushroom dataset}
 \label{fig:p_values_vs_num_samples_mushroom}
 \end{figure}
 
 \begin{figure}[!ht]
     \centering
     \includegraphics[width=0.8\textwidth]{figures/p_values_vs_num_samples_hepatitis.png}
-    \caption{P values vs. number of samples for different models and sampling methods for the datasets}
+    \caption{P values vs. number of samples for different models and sampling methods for the hepatitis dataset}
 \label{fig:p_values_vs_num_samples_hepatitis}
 \end{figure}
 
