remove report structure section

--- a/work2/reports/01-introduction.tex
+++ b/work2/reports/01-introduction.tex
@@ -18,7 +18,7 @@ This study addresses three primary research questions:
 
 \begin{enumerate}
     \item How do KNN and SVM compare in terms of classification accuracy and computational efficiency across datasets with different characteristics?
-    \item What impact do various distance metrics, weighting schemes, and kernel functions have on model performance?
+    \item What impact do various hyperparameters, such as distance metrics, weighting schemes, and kernel functions have on model performance?
     \item Can instance reduction techniques maintain classification accuracy while significantly reducing storage and computational requirements?
 \end{enumerate}
 
@@ -40,14 +40,4 @@ The key contributions of this work include:
     \item Empirical evaluation of three instance reduction techniques (GCNN, ENNTh, and DROP3)
     \item Statistical analysis framework for comparing classification algorithms and reduction methods
     \item Practical guidelines for choosing between KNN and SVM based on dataset properties
-\end{itemize}
-
-\subsection{Report Structure}
-
-The remainder of this report is organized as follows:
-\begin{itemize}
-    \item Section 2 describes the datasets and preprocessing methodology
-    \item Section 3 details the implementation of KNN, SVM, and reduction techniques
-    \item Section 4 presents experimental results and statistical analysis
-    \item Section 5 concludes with key findings and future research directions
 \end{itemize}
