fix missing references

--- a/work2/reports/01-introduction.tex
+++ b/work2/reports/01-introduction.tex
@@ -10,7 +10,7 @@ Classification algorithms assign predefined categories to data points based on t
 A key challenge with instance-based methods like KNN is their computational and storage requirements, 
 particularly for large datasets. Instance reduction techniques address this limitation by identifying 
 and preserving only the most informative training examples, potentially improving both efficiency 
-and generalization \cite{knn}.
+and generalization~\cite{knn}.
 
 \subsection{Research Objectives}
 
