--- a/work2/reports/references.bib
+++ b/work2/reports/references.bib
@@ -191,10 +191,10 @@ title={An Euclidean Distance Based on Tensor Product Graph Diffusion Related Att
 }
 
 
-@inproceedings{pandas,
+@article{pandas,
   title={Data structures for statistical computing in Python.},
   author={McKinney, Wes and others},
-  booktitle={SciPy},
+  journal={Scipy},
   volume={445},
   number={1},
   pages={51--56},
