update KNN performance section and results intro

--- a/work2/reports/04-results-and-analysis/04.1-results.tex
+++ b/work2/reports/04-results-and-analysis/04.1-results.tex
@@ -1,17 +1,6 @@
 \subsection{Results}
 \label{subsec:results}
 
-Here, present the findings of the study. Include relevant data, statistics, and any figures or tables that help illustrate the results.
+\paragraph{Key Results} Tables with key results such as \autoref{tab:knn_results_mushroom}: KNN results for the mushroom dataset and \autoref{tab:knn_results_hepatitis}: KNN results for the hepatitis dataset are included where relevant in the Discussion \autoref{sec:discussion}.
 
-% TODO: Present main findings clearly and concisely
-% TODO: Include relevant statistical analyses
-% TODO: Add figures and tables to illustrate key results
-% TODO: Ensure all figures and tables are properly labeled and referenced in the text
-% TODO: Organize results in a logical order, possibly mirroring the order of the methods
-
-% Add more content here as needed
-\input{tables/knn_results_mushroom.tex}
-\input{tables/knn_results_hepatitis.tex}
-\input{tables/knn_reduction_results_mushroom.tex}
-\input{tables/knn_reduction_results_hepatitis.tex}
-
+\paragraph{Model Legends} Refer to the model legends in the Appendix \autoref{sec:appendix}.
