--- a/work2/reports/04-results-and-analysis/04.2-discussion.tex
+++ b/work2/reports/04-results-and-analysis/04.2-discussion.tex
@@ -1,7 +1,10 @@
 \subsection{Discussion}
 \label{sec:discussion}
 
-In this section, interpret the results, discuss their implications, and relate them back to the research question or hypothesis. Address any limitations of the study and suggest areas for future research.
+\input{tables/knn_results_mushroom.tex}
+\input{tables/knn_results_hepatitis.tex}
+\input{tables/knn_reduction_results_mushroom.tex}
+\input{tables/knn_reduction_results_hepatitis.tex}
 
 \input{04-results-and-analysis/04.2.1-discussion-knn}
 \input{04-results-and-analysis/04.2.2-discussion-svm}
