--- a/work2/reports/04-results-and-analysis/04.2.1-discussion-knn.tex
+++ b/work2/reports/04-results-and-analysis/04.2.1-discussion-knn.tex
@@ -14,15 +14,16 @@ achieving accuracy scores above 92\% and F1 scores above 92.5\% on all top ten c
 \begin{description}
     \item[\textbf{Best Configuration:}]\leavevmode
         \begin{itemize}
-            \item $k = 1 and 3$ (both performed equally well)
-            \item Shepard's, Majority Class, or Inverse Distance Weighted Voting scheme (all performed equally well)
+            \item $k = 1$ and $k = 3$ with Manhattan Distance or Euclidean Distance
+            \item Majority Class Vote or Inverse Distance Weighting
             \item Equal Weighting
-            \item \textbf{Results:} 100\% mean F1 score
+            \item \textbf{Results:} F1 score = 1.000, Train Time = 0.000251s, Test Time = 15.225325s
         \end{itemize}
     
     \item[\textbf{Performance Range:}]\leavevmode
         \begin{itemize}
-            \item Mean F1 Scores: 100\% (no range)
+            \item All top configurations achieved perfect F1 scores (1.000)
+            \item Test times varied from 14.98s to 18.05s
         \end{itemize}
 \end{description}
 
@@ -39,7 +40,7 @@ configurations that could also achieve a perfect F1 score on this dataset.
     \label{fig:ranked_folds_KNN_mushroom}
 \end{figure}
 
-\autoref{fig:ranked_folds_KNN_mushroom} shows the ranked folds for the k-NN algorithm on the mushroom dataset.
+\autoref{fig:ranked_folds_KNN_mushroom} shows the ranked folds for the KNN algorithm on the mushroom dataset.
 The figure illustrates the variation in performance across different KNN models, with some models performing 
 better than others. It's evident a lower value of k (1 or 3) tends to perform better than higher values of k (5 or 7)
 in combination with the other parameters. 
@@ -51,21 +52,15 @@ Interestingly, for each KNN model the performance across the 10 folds is identic
     \item[\textbf{Best Configuration:}]\leavevmode
         \begin{itemize}
             \item $k = 1$ with Chebyshev Distance
-            \item Shepard's, Majority Class, or Inverse Distance Weighted Voting scheme (all performed equally well)
+            \item Shepard's Work Vote (tied with Majority Class and Inverse Distance)
             \item Equal Weighting
-            \item \textbf{Results:} 97.3\% mean F1 score
+            \item \textbf{Results:} F1 score = 0.972618, Train Time = 0.000084s, Test Time = 0.006925s
         \end{itemize}
     
     \item[\textbf{Performance Range:}]\leavevmode
         \begin{itemize}
-            \item Mean F1 Scores: 96.9\% $--$ 97.3\%
-        \end{itemize}
-    
-    \item[\textbf{Key Observations:}]\leavevmode
-        \begin{itemize}
-            \item Euclidean Distance performed best, particularly with ReliefF weighting.
-            \item k = 1 configurations dominated the top results.
-            \item All voting schemes performed similarly when other parameters were optimized.
+            \item Top 3 configurations (all with k=1, Chebyshev): F1 = 0.972618
+            \item Next best configurations: F1 = 0.969271 (k=5,7 with Euclidean)
         \end{itemize}
 \end{description}
 
@@ -83,7 +78,7 @@ As also seen in the mushroom dataset, the F1 scores achieved across all configur
     \label{fig:ranked_folds_KNN_hepatitis}
 \end{figure}
 
-\autoref{fig:ranked_folds_KNN_hepatitis} shows the ranked folds for the k-NN algorithm on the hepatitis dataset.
+\autoref{fig:ranked_folds_KNN_hepatitis} shows the ranked folds for the KNN algorithm on the hepatitis dataset.
 The figure illustrates the variation in performance across different KNN models, with some models outperforming others.
 Unlike the mushroom dataset, the hepatitis dataset shows variation in performance in each model per fold.
 A number of the models showed consistent mean performance but also contained some outliers that performed significantly better or worse
@@ -122,7 +117,7 @@ Therefore, any values greater than 0.05 indicate that the models are not signifi
 \label{fig:nemenyi_test_results_KNN_mushroom}
 \end{figure}
 
-The Nemenyi test results for the KNN models on the hepatitis dataset reveal two statistically distinct
+\paragraph{Hepatitis Dataset:} The Nemenyi test results for the KNN models on the hepatitis dataset reveal two statistically distinct
 groups of model configurations. The first group consists of k = 1 configurations
 (with Manhattan and Euclidean distance) and k=3 with Manhattan distance, which all perform similarly to each other (p=1.00).
 The second group includes configurations with higher k values (3,5,7) using various distance metrics,
@@ -130,7 +125,7 @@ which also perform similarly within their group (p=1.00) but significantly diffe
 group (some comparisons yield p=0.05). This clear separation suggests that the choice of k-value
 has a more substantial impact on model performance than the choice of distance metric, with k=1 configurations behaving distinctly from higher k-values.
 
-The Nemenyi test results for the KNN models on the mushroom dataset reveal distinct clustering patterns across models.
+\paragraph{Mushroom Dataset:} The Nemenyi test results for the KNN models on the mushroom dataset reveal distinct clustering patterns across models.
 The first group consists of `k1ManMajEq', `k1EucShpEq', and `k3ManDisEq', and `k3ChebMajEq' configurations, which show
 high similarity within their group (p=0.6 $-$ 1.00). A second distinct group includes `k5ManShpInf', `k5ChevDisInf',
 `k7EucMajInf', and `k7ChebShpRtf' which also show high similarity within their group (p=0.87 $-$ 1.00), except 
