--- a/work2/reports/03-methods/03.1-methods-knn.tex
+++ b/work2/reports/03-methods/03.1-methods-knn.tex
@@ -188,11 +188,11 @@ The performance of the KNN models was evaluated using the following metrics:
     \item Testing Time: The time taken to make predictions on the test set.
 \end{itemize}
 
-The F1 score was used as our primary metric for evaluating the performance of the KNN models.
+\paragraph{F1 Score} The F1 score was used as our primary metric for evaluating the performance of the KNN models.
 since it balances the trade-off between precision and recall, and does not report overly favorable results when the dataset is imbalanced.
 The hepatitis dataset is imbalanced, with a 79 / 31 split between the two classes, so the F1 score is a more reliable metric than accuracy \autoref{fig:class-distributions}
 
-Additionally, in medical diagnostics like hepatitis classification, the costs of different types of errors are significant $-$ 
+\paragraph{Considerations in medical diagnostics} Additionally, in medical diagnostics like hepatitis classification, the costs of different types of errors are significant $-$ 
 missing a positive diagnosis (false negative, impacting recall) could delay critical treatment,
 while a false positive (impacting precision) could lead to unnecessary medical procedures.
 The F1 score's balance of precision and recall helps account for both these error types, making it particularly suitable for this dataset.
