update analysis for SVM

--- a/work2/reports/tables/friedman_test_results_mushroom.tex
+++ b/work2/reports/tables/friedman_test_results_mushroom.tex
@@ -7,13 +7,13 @@
 name & P Value \\
 \midrule
 KNN Top Sample of 8 F1 Scores & 1 \\
-SVM Top Sample of 8 F1 Scores & 3.331542319440828e-08 \\
+SVM Top Sample of 8 F1 Scores & 1.7732928268502093e-11 \\
 KNN Linear Sample of 8 F1 Scores & 1.477429493282523e-12 \\
-SVM Linear Sample of 8 F1 Scores & 1.068518136588972e-10 \\
+SVM Linear Sample of 8 F1 Scores & 7.435065423603964e-12 \\
 KNN-Reduction Linear Sample of 8 F1 Scores & 1 \\
 SVM-Reduction Linear Sample of 8 F1 Scores & 1.3800570312932555e-06 \\
 KNN-Reduction Linear Sample of 8 Training Times & 0.003993295308193392 \\
-SVM-Reduction Linear Sample of 8 Training Times & 7.459327906944864e-05 \\
+SVM-Reduction Linear Sample of 8 Training Times & 0.0002950344433046935 \\
 \bottomrule
 \end{tabular}
 \end{table}
