--- a/work2/reports/tables/svm_significant_pairs_hepatitis.tex
+++ b/work2/reports/tables/svm_significant_pairs_hepatitis.tex
@@ -6,9 +6,11 @@
 \toprule
 C & Kernel Type & Mean F1 \\
 \midrule
-3 & rbf & 0.969 \\
-5 & rbf & 0.971 \\
-7 & sigmoid & 0.829 \\
+0.050 & linear & 0.888 \\
+0.050 & rbf & 0.884 \\
+5.000 & rbf & 0.971 \\
+50.000 & linear & 0.883 \\
+50.000 & sigmoid & 0.866 \\
 \bottomrule
 \end{tabular}
 \end{table}
