--- a/work2/reports/04-results-and-analysis/04.2-discussion.tex
+++ b/work2/reports/04-results-and-analysis/04.2-discussion.tex
@@ -5,6 +5,10 @@
 \input{tables/knn_results_hepatitis.tex}
 \input{tables/knn_reduction_results_mushroom.tex}
 \input{tables/knn_reduction_results_hepatitis.tex}
+\input{tables/svm_results_mushroom.tex}
+\input{tables/svm_results_hepatitis.tex}
+\input{tables/svm_reduction_results_mushroom.tex}
+\input{tables/svm_reduction_results_hepatitis.tex}
 
 \input{04-results-and-analysis/04.2.1-discussion-knn}
 \input{04-results-and-analysis/04.2.2-discussion-svm}
