--- a/work2/reports/05-conclusion.tex
+++ b/work2/reports/05-conclusion.tex
@@ -11,6 +11,7 @@ This study has provided a comprehensive evaluation of KNN and SVM classification
     \item Instance reduction techniques, particularly GCNN, successfully reduced storage requirements while maintaining classification accuracy
     \item Statistical analysis revealed significant differences between model configurations, highlighting the importance of parameter tuning
     \item The top-performing models tended to have very similar F1 scores, suggesting there isn't a single perfect model for all datasets
+    \item SVM configurations with higher C values tended to perform better, suggesting that greater regularization is better for both datasets.
 \end{itemize}
 
 \subsection{Practical Implications}
