rearrange results and analysis

--- a/work2/reports/04-results-and-analysis/04.2-discussion-knn.tex
+++ b/work2/reports/04-results-and-analysis/04.2-discussion-knn.tex
@@ -1,4 +1,4 @@
-\subsubsection{k-Nearest Neighbors (KNN) Analysis}
+\subsection{k-Nearest Neighbors (KNN) Analysis}
 \label{subsubsec:discussion-knn}
 
 This section interprets the results of the KNN algorithm, discussing its performance and implications.
