--- a/work2/reports/04-results-and-analysis/04.3-discussion-svm.tex
+++ b/work2/reports/04-results-and-analysis/04.3-discussion-svm.tex
@@ -1,4 +1,4 @@
-\subsubsection{Support Vector Machines (SVM) Analysis}
+\subsection{Support Vector Machines (SVM) Analysis}
 \label{subsubsec:discussion-svm}
 
 A key advantage of the SVM over KNN is that SVMs are much faster during consultation time. As seen in \autoref{fig:model_comparison_mushroom},
