--- a/work2/reports/04-results-and-analysis/04.4-discussion-reduction.tex
+++ b/work2/reports/04-results-and-analysis/04.4-discussion-reduction.tex
@@ -1,4 +1,4 @@
-\subsubsection{Instance Reduction Analysis}
+\subsection{Instance Reduction Analysis}
 \label{subsubsec:discussion-reduction}
 
 This section examines the impact of three reduction techniques—GCNN, ENNTH, and Drop3—on the performance, training time, testing time, and storage requirements of both the KNN and SVM algorithms.
