--- a/work2/reports/04-results-and-analysis/04-results-and-analysis.tex
+++ b/work2/reports/04-results-and-analysis/04-results-and-analysis.tex
@@ -1,5 +1,19 @@
 \section{Results and Analysis}
 \label{sec:results-and-analysis}
 
-\input{04-results-and-analysis/04.1-results}
-\input{04-results-and-analysis/04.2-discussion}
+\input{tables/knn_results_mushroom.tex}
+\input{tables/knn_results_hepatitis.tex}
+\input{tables/knn_reduction_results_mushroom.tex}
+\input{tables/knn_reduction_results_hepatitis.tex}
+\input{tables/svm_results_mushroom.tex}
+\input{tables/svm_results_hepatitis.tex}
+\input{tables/svm_reduction_results_mushroom.tex}
+\input{tables/svm_reduction_results_hepatitis.tex}
+
+\input{04-results-and-analysis/04.2-discussion-knn}
+\input{04-results-and-analysis/04.3-discussion-svm}
+
+\input{04-results-and-analysis/04.4-discussion-reduction}
+\input{04-results-and-analysis/04.5-discussion-summary}
+
+
