update tables and figures

--- a/work2/reports/tables/SVM-Reduction_legend.tex
+++ b/work2/reports/tables/SVM-Reduction_legend.tex
@@ -6,10 +6,10 @@
 \toprule
 Model Label & C & Kernel Type \\
 \midrule
-CtrlC5Poly & 5 & poly \\
-GcnnC5Poly & 5 & poly \\
-EnnthC5Poly & 5 & poly \\
-Drop3C5Poly & 5 & poly \\
+CtrlC50Rbf & 50 & rbf \\
+GcnnC50Rbf & 50 & rbf \\
+EnnthC50Rbf & 50 & rbf \\
+Drop3C50Rbf & 50 & rbf \\
 \bottomrule
 \end{tabular}
 \end{table}
