--- a/work2/reports/tables/knn_significant_pairs_mushroom.tex
+++ b/work2/reports/tables/knn_significant_pairs_mushroom.tex
@@ -1,6 +1,6 @@
 \begin{table}
 \centering
-\caption{Significant Differences in KNN Models}
+\caption{Significant Differences in KNN Models for Mushroom}
 \label{tab:knn_significant_pairs_mushroom}
 \begin{tabular}{rlllr}
 \toprule
