--- a/work2/reports/tables/svm_significant_pairs_mushroom.tex
+++ b/work2/reports/tables/svm_significant_pairs_mushroom.tex
@@ -1,6 +1,6 @@
 \begin{table}
 \centering
-\caption{Significant Differences in SVM Models}
+\caption{Significant Differences in SVM Models for Mushroom}
 \label{tab:svm_significant_pairs_mushroom}
 \begin{tabular}{rlr}
 \toprule
