--- a/work2/reports/tables/knn_significant_pairs_hepatitis.tex
+++ b/work2/reports/tables/knn_significant_pairs_hepatitis.tex
@@ -1,6 +1,6 @@
 \begin{table}
 \centering
-\caption{Significant Differences in KNN Models}
+\caption{Significant Differences in KNN Models for Hepatitis}
 \label{tab:knn_significant_pairs_hepatitis}
 \begin{tabular}{rlllr}
 \toprule
