--- a/work2/reports/tables/svm_significant_pairs_hepatitis.tex
+++ b/work2/reports/tables/svm_significant_pairs_hepatitis.tex
@@ -1,6 +1,6 @@
 \begin{table}
 \centering
-\caption{Significant Differences in SVM Models}
+\caption{Significant Differences in SVM Models for Hepatitis}
 \label{tab:svm_significant_pairs_hepatitis}
 \begin{tabular}{rlr}
 \toprule
